--- a/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
+++ b/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
@@ -56,13 +56,13 @@
     <AndroidEnableSGenConcurrent>true</AndroidEnableSGenConcurrent>
     <JavaMaximumHeapSize>1G</JavaMaximumHeapSize>
     <AotAssemblies>true</AotAssemblies>
-    <EnableLLVM>true</EnableLLVM>
-    <AndroidSupportedAbis>armeabi-v7a;x86_64;arm64-v8a</AndroidSupportedAbis>
+    <EnableLLVM>false</EnableLLVM>
+    <AndroidSupportedAbis>armeabi-v7a;x86;x86_64;arm64-v8a</AndroidSupportedAbis>
     <AndroidLinkMode>SdkOnly</AndroidLinkMode>
     <EnableProguard>false</EnableProguard>
     <AndroidCreatePackagePerAbi>true</AndroidCreatePackagePerAbi>
     <AndroidEnableMultiDex>false</AndroidEnableMultiDex>
-    <BundleAssemblies>true</BundleAssemblies>
+    <BundleAssemblies>false</BundleAssemblies>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
@@ -201,12 +201,6 @@
     <AndroidResource Include="Resources\drawable-xxhdpi\Rocket.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SSFR_Movies\SSFR_Movies.csproj">
-      <Project>{579d795d-dc3d-4d6b-82d5-fbdbc31fb272}</Project>
-      <Name>SSFR_Movies</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <AndroidResource Include="Resources\drawable-hdpi\Ic_launcher.png" />
   </ItemGroup>
   <ItemGroup>
@@ -244,6 +238,12 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-xxhdpi\Loading.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SSFR_Movies\SSFR_Movies.csproj">
+      <Project>{579d795d-dc3d-4d6b-82d5-fbdbc31fb272}</Project>
+      <Name>SSFR_Movies</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
