--- a/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
+++ b/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
@@ -10,10 +10,10 @@
     <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.12.0" />
     <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.12.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.4" />
-    <PackageReference Include="MonkeyCache" Version="1.0.1-beta" />
-    <PackageReference Include="MonkeyCache.FileStore" Version="1.0.1-beta" />
-    <PackageReference Include="System.Memory" Version="4.5.2-servicing-27114-05" />
-    <PackageReference Include="Unity" Version="5.8.11" />
+    <PackageReference Include="MonkeyCache" Version="1.1.0-beta" />
+    <PackageReference Include="MonkeyCache.FileStore" Version="1.1.0-beta" />
+    <PackageReference Include="System.Memory" Version="4.5.2" />
+    <PackageReference Include="Unity" Version="5.8.13" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="4.0.0.190-beta" />
     <PackageReference Include="Xam.Plugins.Settings" Version="4.0.0.10-beta" />
     <PackageReference Include="Xamarin.Essentials" Version="1.0.0" />
