--- a/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
+++ b/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
@@ -17,8 +17,8 @@
     <PackageReference Include="Refractored.XamForms.PullToRefresh" Version="2.2.3" />
     <PackageReference Include="System.Drawing.Common" Version="4.6.0-preview.18571.3" />
     <PackageReference Include="System.Memory" Version="4.5.2" />
-    <PackageReference Include="Unity" Version="5.9.1" />
-    <PackageReference Include="Unity.Abstractions" Version="4.0.0" />
+    <PackageReference Include="Unity" Version="5.9.2" />
+    <PackageReference Include="Unity.Abstractions" Version="4.0.2" />
     <PackageReference Include="Unity.ServiceLocation" Version="5.9.1" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="4.0.0.190-beta" />
     <PackageReference Include="Xam.Plugins.Settings" Version="4.0.0.10-beta" />
@@ -51,6 +51,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\SearchPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\ShellSplash.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\StartPagexaml.xaml">
