--- a/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
+++ b/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
@@ -268,5 +268,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-xxhdpi\Play.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Icon1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
