--- a/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
+++ b/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
@@ -91,7 +91,7 @@
       <Version>1.13.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite">
-      <Version>3.0.0-preview.19074.3</Version>
+      <Version>2.2.1</Version>
     </PackageReference>
     <PackageReference Include="MonkeyCache">
       <Version>1.2.0-beta</Version>
