--- a/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
+++ b/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
@@ -94,6 +94,9 @@
     <PackageReference Include="Plugin.CurrentActivity">
       <Version>2.1.0.4</Version>
     </PackageReference>
+    <PackageReference Include="ReactiveUI">
+      <Version>10.0.0-preview.3</Version>
+    </PackageReference>
     <PackageReference Include="Realm">
       <Version>3.4.0</Version>
     </PackageReference>
