--- a/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
+++ b/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
@@ -7,19 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MonkeyCache" Version="1.2.0-beta" />
-    <PackageReference Include="MonkeyCache.FileStore" Version="1.2.0-beta" />
+    <PackageReference Include="ReactiveUI" Version="9.9.5" />
+    <PackageReference Include="ReactiveUI.XamForms" Version="9.9.5" />
     <PackageReference Include="Realm" Version="3.4.0" />
     <PackageReference Include="Realm.Database" Version="3.4.0" />
     <PackageReference Include="Realm.DataBinding" Version="1.2.0" />
     <PackageReference Include="Refractored.XamForms.PullToRefresh" Version="2.2.3" />
     <PackageReference Include="Splat" Version="6.1.7" />
-    <PackageReference Include="Xam.Plugin.Connectivity" Version="4.0.0.190-beta" />
     <PackageReference Include="Xam.Plugins.Settings" Version="4.0.0.10-beta" />
     <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
-    <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.5.860-pre" />
-    <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.5.860-pre" />
-    <PackageReference Include="Xamarin.Forms" Version="4.0.0.62955-pre2" />
+    <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.5.867-pre" />
+    <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.5.867-pre" />
+    <PackageReference Include="Xamarin.Forms" Version="4.0.1.102444-nightly" />
   </ItemGroup>
 
   <ItemGroup>
